--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 @import url(../css/awesome.css);
 @import url(../css/cdn.css);
 @import url(../css/pricing.css);
+@import url(../css/customers.css);
 
 *{
   margin: 0;
@@ -24,7 +25,6 @@ section{
   text-align: center;
   margin: 0 auto 25px;
   font-size: 36px;
-  padding: 100px 0 0;
   width: 668px;
   font-family: "Raleway";
   font-size: 36px;
