--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
 @import url(../css/pricing.css);
 @import url(../css/customers.css);
 @import url(../css/axure.css);
+@import url(../css/header.css);
 
 *{
   margin: 0;
@@ -49,13 +50,6 @@ section{
   margin: 34px auto;  
 }
 
-.line{
-  width: 64px;
-  height: 2px;
-  background-color: #D98943;
-  margin: 0 auto 34px;
-}
-
 .subtitle{
   text-align: center;
   margin: 0 auto 68px;
@@ -66,4 +60,8 @@ section{
 
 .subtitle-color{
   color: rgba(255, 255, 255, 0.8);
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 300;
+font-size: 16px;
 }
