--- a/css/header.css
+++ b/css/header.css
@@ -10,7 +10,7 @@
     align-items: center;
 }
 
-.logo {
+/* .logo {
     font-family: Raleway;
     font-style: normal;
     font-weight: normal;
@@ -22,7 +22,7 @@
 .logo::after{
     content: "It";
     color: #ec7979;
-}
+} */
 
 .navigation-list{
     display: flex;
@@ -36,10 +36,21 @@
     font-weight: 600;
     font-size: 15px;
     color: rgba(255, 255, 255, 0.7);
-    transition: 0.5;
+    transition: 0,29;
     cursor: pointer;
+    position: relative;   
+    transition: 1s;
 }
 
 .navigation-list-item:hover{
-    border-bottom: 2px solid #da5f5f;
+    transform: scale(2);
+}
+
+.navigation-list-item:hover::after{
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #ec7979;
+    display: block;
+    position: absolute;
 }
