--- a/css/axit.css
+++ b/css/axit.css
@@ -6,6 +6,7 @@
     position: relative;
 }
 
+
 .axit::after{
     content: "";
     width:  100%;
@@ -16,3 +17,98 @@
     top: 0;
     left: 0;
 }
+
+/* .axit-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+} */
+
+.axit-card-content-text{
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    Font-size: 36px;
+    color: #FFFFFF;
+    width: 544px;
+    margin-bottom: 32px;
+}
+
+.axit-logo{
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 60px;
+    color: #ffffff;
+    text-transform: uppercase;
+    margin-bottom: 32px;
+  }
+  
+  .axit-logo::after{
+    content: "It";
+    color: #ec7979;
+  }
+
+  .axit-card-content-text::after{
+      content: "";
+      width: 64px;
+      height: 2px;
+      background-color: #ffffff;
+      display: block;
+      margin: 32px 0 39px;
+  }
+
+  .axit-subtitle{
+    width: 300px;
+    font-size: 14px;
+    font-weight: normal;
+    color: #86878b;
+    margin-bottom: 39px;
+  }
+
+  .axit-button{
+    /* display: block;
+    margin: auto; */
+    width: 135px;
+    height: 42PX;
+    font-family: Open Sans;
+    font-weight: 600;
+    font-size: 15px;
+    color: #ffffff;
+    background-color: transparent;
+    border: 1px solid #ffffff;
+    cursor: pointer;
+}
+
+  /* form{
+    background-color: #ffffff;
+    width: 370px;
+    overflow: hidden;
+  }
+
+  .form-content{
+
+
+  }
+
+  .form-title-text{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    
+  }
+  
+  /* .form-title::after{
+    content: "free";
+    color: #ec7979;
+    margin: 0 7px;
+  } */
+
+  /* label{
+    display: block;
+  }
+  
+  input{
+    display: block;
+    border: none;
+  } */ */
