--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@
 @import url(../css/axit.css);
 @import url(../css/social.css);
 @import url(../css/footer.css);
+@import url(../css/tabs.css);
 
 *{
   margin: 0;
@@ -26,20 +27,6 @@ section{
   margin: auto;
   position: relative;
   z-index: 3;
-}
-
-.logo {
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 30px;
-  color: #ffffff;
-  text-transform: uppercase;
-}
-
-.logo::after{
-  content: "It";
-  color: #ec7979;
 }
 
 .title{
