--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
 @import url(../css/social.css);
 @import url(../css/footer.css);
 @import url(../css/tabs.css);
+@import url(../css/contact.css);
 
 *{
   margin: 0;
