--- a/css/tabs.css
+++ b/css/tabs.css
@@ -1,7 +1,14 @@
-.tabs-row{
+
+
+
+
+
+
+
+/* .tabs-row{
     display: flex;
     flex-direction: row;
-    /* justify-content: space-between; */
+    justify-content: space-between;
 }
 
 .tabs-card{
@@ -38,15 +45,15 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-}
+} */
 
-.tabs-content-item-left{
+/* .tabs-content-item-left{
     width: 572px;
-    /* margin-bottom: -30px; */
-    /* display: flex;
+    margin-bottom: -30px;
+    display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: space-between; */
+    justify-content: space-between;
 }
 
 .tabs-title{
@@ -70,4 +77,4 @@
 .tabs-content-item-right{
     width: 320px;
     height: 256px;
-}
+} */
